-[修改]优化自定义视图功能
Signed-off-by: chenqw <gdnpc@163.com>